# matmercator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
examples/: quickstart.ipynb
results/mp20_scm_gtm/: RESULTS.md  config.json  experiment.md  experiment_report.json  gtm_coords.parquet  report.json
scripts/: build_features.py  build_landscapes.py  build_map.py  make_hero.py  run_mp20.py
src/matmercator/: __init__.py  __main__.py  cache.py  cartography.py  cli.py  composition.py  config.py  data.py  experiment.py  featurize.py  featurize_cache.py  hero.py  jobs.py  landscape.py  metrics.py  pipeline.py  plots.py  provenance.py  sampling.py  selection.py
tests/: conftest.py  test_cache.py  test_cartography.py  test_composition.py  test_config.py  test_data.py  test_experiment.py  test_featurize.py  test_landscape.py  test_metrics.py  test_plots.py  test_provenance.py  test_regression.py  test_sampling.py  test_selection.py
tests/fixtures/mp_20/: train.csv  val.csv
